--- a/ansible/installdb.yml
+++ b/ansible/installdb.yml
@@ -12,3 +12,8 @@
           - vim
           - python3-mysqldb
         state: present
+   - name: 'Download e extração DB'    
+     unarchive:
+        src: https://github.com/rogerramossilva/devops/raw/master/db.zip
+        dest: /tmp
+        remote_src: yes
