Alterações para o arquivo de instalação do servidor web - installweb.yml

--- a/playbook.yml
+++ b/playbook.yml
@@ -5,7 +5,7 @@
     - name: Criação Usuário Suporte
       ansible.builtin.user:
         name: suporte
-        comment: suporte
+        comment: sVAGRAuporte
         uid: 5000
         group: root
 
